--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -485,6 +485,7 @@ div.ag-shop-mob-nav{
     padding-left: 36px;
     border-bottom: 1px rgba(12,142,130,1);
     text-shadow: 0 0 3px rgba(0,0,0,0.4);
+    display: none;
 }
 
 div.ag-shop-mob-nav:before{
@@ -590,13 +591,18 @@ div.ag-shop-mob-title{
     table.catalog-menu-table{
         width: 100% !important;
         position: fixed;
-        top: 32px;
+        top: 0px;
         z-index: 9998;
         background-color: white;
+        left: 0px !important;
+        right: 0px !important;
+        border-spacing: 0px !important;
     }
 
     table.catalog-menu-table td{
         width: 50%;
+        border-collapse: collapse !important;
+        padding: 0px !important;
     }
 
     div.js-menu__list{
@@ -615,17 +621,7 @@ div.ag-shop-mob-title{
         display: inline-flex;
         position: relative;
         color: rgba(0,122,108,1);
-        padding-right: 10px;
-    }
-
-    .ag-shop-menu__header h2:before,
-    a.ag-shop-menu__link:before{
-        content: "___";
-        position: absolute;
-        right: 0px;
-        width: 20px;
-        color: transparent;
-        background: linear-gradient(to right, transparent, white);
+//        padding-right: 10px;
     }
 
     .scroll-fixed{
@@ -661,6 +657,18 @@ div.ag-shop-mob-title{
         top: -70px;
     }
 
+    .on-top{
+        top: 0px !important;
+    }
+
+    .ag-shop-content__limited-container{
+        padding-top: 0px;
+    }
+
+    .ag-shop-nav__container .grid--bleed{
+        display: none;
+    }
+
 }
 
 @media(min-width: 460px){
@@ -674,9 +682,9 @@ div.ag-shop-mob-title{
     .ag-shop-content{
         padding-top: 10px;
     }
+
+
 }
-
-
 
 .catalog-item-loader{
     transition: 1s;
@@ -696,3 +704,26 @@ div.ag-shop-mob-title{
     padding-left: 10px;
     font-size: 14px;   
 }
+
+
+.ag-shop-nav__link--active{
+    width: 100%;
+}
+
+.ag-shop-menu__link{
+    white-space: nowrap;
+}
+
+
+table.catalog-menu-table{
+    width: 100% !important;
+}
+
+.catalog-menu{
+    width: 100%;
+}
+
+    table.catalog-menu-table .ag-shop-menu__link{
+        padding: 12px 0px;
+    }
+
