--- a/www/local/assets/styles/semantic.css
+++ b/www/local/assets/styles/semantic.css
@@ -25,12 +25,14 @@ h4{
 .ag-shop-card__container a:before{
     content: "___";
     position: absolute;
-    right: 0px;;
+    right: 0px;
+    /*
     background-image:linear-gradient(
         90deg, 
         rgba(255, 255, 255, 0), 
         rgba(255,255,255,1)
     );
+    */
     color: white;
 }
 
