--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -275,16 +275,16 @@ input.ag-balls[type="radio"]{
 }
 
 h3.ag-shop-item-card__name{
-    //text-shadow: 1px .5px .5px #ffffff;
+    /* text-shadow: 1px .5px .5px #ffffff; */
     text-shadow: 0 0 3px rgba(0,0,0,0.4); 
     color: white !important;
-    width: 300px;
 }
 
 a.ag-shop-item-card > h3.ag-shop-item-card__name{
     position: absolute;
     bottom: 20px;
     left: 20px;
+    right: 20px;
     z-index: 105;
 }
 
@@ -314,19 +314,27 @@ a.ag-shop-item-card > h3.ag-shop-item-card__name{
 }
 
 .feel_so_green{
-//    background-image: linear-gradient(20deg, rgba(0,122,108,1) 2%,rgba(0,122,108,0.44) 40%,rgba(0,122,108,0.22) 60%,rgba(0,122,108,0) 100%) !important;
+    /* background-image: linear-gradient(20deg, rgba(0,122,108,1) 2%,rgba(0,122,108,0.44) 40%,rgba(0,122,108,0.22) 60%,rgba(0,122,108,0) 100%) !important; */
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(2%, rgba(0,122,108,0.6)),color-stop(10%, rgba(0,122,108,0.44)),color-stop(20%, rgba(0,122,108,0.22)),color-stop(30%, rgba(0,122,108,0))) !important;
+    background-image: -webkit-linear-gradient(bottom, rgba(0,122,108,0.6) 2%,rgba(0,122,108,0.44) 10%,rgba(0,122,108,0.22) 20%,rgba(0,122,108,0) 30%) !important;
     background-image: linear-gradient(0deg, rgba(0,122,108,0.6) 2%,rgba(0,122,108,0.44) 10%,rgba(0,122,108,0.22) 20%,rgba(0,122,108,0) 30%) !important;
 }
 .feel_so_pink{
-//    background-image: linear-gradient(20deg, rgba(239,77,148,1) 2%,rgba(239,77,148,0.44) 40%,rgba(239,77,148,0.22) 60%,rgba(239,77,148,0) 100%) !important;
+    /* background-image: linear-gradient(20deg, rgba(239,77,148,1) 2%,rgba(239,77,148,0.44) 40%,rgba(239,77,148,0.22) 60%,rgba(239,77,148,0) 100%) !important; */
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(2%, rgba(239,77,148,0.6)),color-stop(10%, rgba(239,77,148,0.44)),color-stop(20%, rgba(239,77,148,0.22)),color-stop(30%, rgba(239,77,148,0))) !important;
+    background-image: -webkit-linear-gradient(bottom, rgba(239,77,148,0.6) 2%,rgba(239,77,148,0.44) 10%,rgba(239,77,148,0.22) 20%,rgba(239,77,148,0) 30%) !important;
     background-image: linear-gradient(0deg, rgba(239,77,148,0.6) 2%,rgba(239,77,148,0.44) 10%,rgba(239,77,148,0.22) 20%,rgba(239,77,148,0) 30%) !important;
 }
 .feel_so_yellow{
-//    background-image: linear-gradient(20deg, rgba(255,194,14,1) 2%,rgba(255,194,14,0.44) 40%,rgba(255,194,14,0.22) 60%,rgba(255,194,14,0) 100%) !important;
+    /* background-image: linear-gradient(20deg, rgba(255,194,14,1) 2%,rgba(255,194,14,0.44) 40%,rgba(255,194,14,0.22) 60%,rgba(255,194,14,0) 100%) !important; */
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(2%, rgba(161,164,169,0.6)),color-stop(10%, rgba(161,164,169,0.44)),color-stop(20%, rgba(161,164,169,0.22)),color-stop(30%, rgba(161,164,169,0))) !important;
+    background-image: -webkit-linear-gradient(bottom, rgba(161,164,169,0.6) 2%,rgba(161,164,169,0.44) 10%,rgba(161,164,169,0.22) 20%,rgba(161,164,169,0) 30%) !important;
     background-image: linear-gradient(0deg, rgba(161,164,169,0.6) 2%,rgba(161,164,169,0.44) 10%,rgba(161,164,169,0.22) 20%,rgba(161,164,169,0) 30%) !important;
 }
 .feel_so_blue{
-//    background-image: linear-gradient(20deg, rgba(0,192,243,1) 2%,rgba(0,192,243,0.44) 40%,rgba(0,192,243,0.22) 60%,rgba(0,192,243,0) 100%) !important;
+    /* background-image: linear-gradient(20deg, rgba(0,192,243,1) 2%,rgba(0,192,243,0.44) 40%,rgba(0,192,243,0.22) 60%,rgba(0,192,243,0) 100%) !important; */
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(2%, rgba(0,192,243,0.6)),color-stop(10%, rgba(0,192,243,0.44)),color-stop(20%, rgba(0,192,243,0.22)),color-stop(30%, rgba(0,192,243,0))) !important;
+    background-image: -webkit-linear-gradient(bottom, rgba(0,192,243,0.6) 2%,rgba(0,192,243,0.44) 10%,rgba(0,192,243,0.22) 20%,rgba(0,192,243,0) 30%) !important;
     background-image: linear-gradient(0deg, rgba(0,192,243,0.6) 2%,rgba(0,192,243,0.44) 10%,rgba(0,192,243,0.22) 20%,rgba(0,192,243,0) 30%) !important;
 }
 
@@ -348,7 +356,7 @@ a.ag-shop-item-card:hover > h3.ag-shop-item-card__name{
 
 
 .ag-shop-item-card__badges{
-    //z-index: 120 !important;
+    /* z-index: 120 !important; */
 }
 
 .ag-shop-slider-card__points{
