--- a/www/local/assets/styles/card.css
+++ b/www/local/assets/styles/card.css
@@ -1355,6 +1355,8 @@ input:checked + .ag-shop-card__places-item:before {
   background: rgba(0,122,108,1);
   border-radius: 100px;
   transition: 0.2s ease-out;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
 }
 .ag-shop-card__submit-button::moz-focus-inner {
   border: 0;
@@ -1377,6 +1379,9 @@ input:checked + .ag-shop-card__places-item:before {
   font-weight: 500;
   color: #b80d0d;
   margin-bottom: 30px;
+}
+.ag-shop-card__requirements a {
+  display: inline;
 }
 .ag-shop-card__card-number-input {
   background: none;
@@ -1696,7 +1701,6 @@ input:checked + .ag-shop-card__places-item:before {
   font-size: 13px;
   font-size: 0.8125rem;
   color: #263146;
-  line-height: 20px;
 }
 .ag-shop-card__selected-place-station span {
   display: inline-block;
@@ -1715,7 +1719,6 @@ input:checked + .ag-shop-card__places-item:before {
   display: inline-block;
   vertical-align: middle;
   margin-left: 10px;
-  margin-top: -11px;
   font-family: 'SF UI Text', Arial, sans-serif;
   font-size: 13px;
   font-size: 0.8125rem;
