--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -721,3 +721,11 @@ table.catalog-menu-table{
 .bx-session-message{
     display: none !important;
 }
+
+div.amounter--on{
+    display: flex;
+}
+
+div.amounter--off{
+    display: none;
+}
