--- a/www/local/assets/styles/components.css
+++ b/www/local/assets/styles/components.css
@@ -1432,13 +1432,14 @@
   position: relative;
   top: 20%;
   box-sizing: border-box;
-  width: 93.75%;
+  width:17.75%;
   max-width: 700px;
   background: #fff;
   padding: 10px;
   margin: 0 auto;
   border-radius: 3px;
   box-shadow: 0px 2px 37px -2px rgba(97,119,120,0.2);
+  text-align: center;
 }
 .ag-shop-modal__container {
   border: 1px solid #01b7a8;
