--- a/www/local/assets/styles/rules.css
+++ b/www/local/assets/styles/rules.css
@@ -979,6 +979,8 @@ body {
   color: #263146;
   line-height: 19px;
 }
+.ag-shop-rules__address-description.w100_adr{max-width: 960px;}
+
 .ag-shop-rules__address-metro {
   margin: 20px 0 10px;
 }
