--- a/www/local/assets/styles/components.css
+++ b/www/local/assets/styles/components.css
@@ -1439,8 +1439,9 @@
   margin: 0 auto;
   border-radius: 3px;
   box-shadow: 0px 2px 37px -2px rgba(97,119,120,0.2);
-  text-align: center;
+  
 }
+.popup_center{text-align: center;}
 .ag-shop-modal__container {
   border: 1px solid #01b7a8;
   border-radius: 3px;
