--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -782,3 +782,11 @@ div.amounter--off{
     }
 }
 
+
+.image-badges_margin-0{
+    margin-top: 9px!important;
+}
+
+.first_image-badges{
+    margin-top: 85px!important;
+}
