--- a/www/local/templates/agshop_mobile/css/mod.css
+++ b/www/local/templates/agshop_mobile/css/mod.css
@@ -26,8 +26,8 @@
 
 /********* Для работы сердечек********/
 .mobile-product-item{position:relative;}
-.wish-on{background-image: url(/local/templates/agshop_mobile/img/icon__product-favourite--pink.svg);}
-.wish-off{background-image: url(/local/templates/agshop_mobile/img/icon__product-favourite--grey.svg);}
+/*.wish-on{background-image: url(/local/templates/agshop_mobile/img/icon__product-favourite--pink.svg);}
+.wish-off{background-image: url(/local/templates/agshop_mobile/img/icon__product-favourite--grey.svg);}*/
 
 /********* Для пагинации ********/
 .more-button{
@@ -35,12 +35,13 @@
     width: 100px;
     height: 40px;
     font-size: 14px;
-    margin: 20px 25%;
+    margin: 20px auto;
     padding: 10px;
     border-radius: 10px;
     color: #444;
     text-decoration: none;
     cursor: pointer;
+    display: block;
 }
 
 /********* Об отсутствии товаров по условию ********/
