--- a/www/local/assets/styles/troika.css
+++ b/www/local/assets/styles/troika.css
@@ -14,6 +14,6 @@
 }
 
 .troyka-number-wrong{
-    border: 1px red solid !important;
+    border: 1px dashed #b80d0d;
     background-color: #fcf4e6;
 }
