--- a/www/local/templates/agshop_mobile/css/main.css
+++ b/www/local/templates/agshop_mobile/css/main.css
@@ -2792,6 +2792,7 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .icon-search-notfind {
