--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -837,3 +837,17 @@ div.amounter--off{
     color: white;
 }
 */
+
+.auction .date{
+    font-weight: bold;
+    margin-left: 5px;
+}
+
+.bet-confirm-num{
+    color: rgba(0,122,108,1);
+    height: 32px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    width: 110px;
+}
