--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -855,3 +855,27 @@ div.amounter--off{
 .setbet{
     text-align: center;
 }
+
+table.auction-winners{
+    width: 100%;
+}
+
+table.auction-winners th{
+    background-color: rgba(0,122,108,1);
+    color: white;
+}
+
+
+table.auction-winners td.auction-amount{
+    width: 70px;
+    text-align: center;
+}
+
+table.auction-winners td.auction-price{
+    width: 70px;
+    text-align: center;
+}
+
+table.auction-winners .winner{
+    background-color: rgba(255,194,14,1);
+}
