--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -22,6 +22,7 @@
 .ag-shop-slider-card-dark__info-layer{
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: 50% 50%;
 }
 
 div.filter-active{
