--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -1018,3 +1018,10 @@ input:disabled + .ag-shop-card__places-item {
     opacity: 0.33;
 }
 
+.ag-shop-modal__row{
+    padding: 5px 20px;
+}
+
+.ag-shop-modal__buttons-wrap{
+    padding: 20px 0px 0px 0px;
+}
