--- a/www/local/assets/styles/mod.css
+++ b/www/local/assets/styles/mod.css
@@ -962,3 +962,8 @@ table.auction-winners .winner{
     position: relative;
 }
 
+/* AG-4902  */
+.mobile-search-notfind{
+    z-index:199 !important;
+}
+
