--- a/www/local/assets/styles/card.css
+++ b/www/local/assets/styles/card.css
@@ -2481,3 +2481,35 @@ input:checked + .ag-shop-card__places-item:before {
     max-width: 100%;
   }
 }
+
+
+/*Стили для малой карусели с лева */
+
+.buttons-carousel {
+    margin: 5px 0;
+    margin-left: 17px;
+  }
+  #next, #prev {
+    font-size: 14px;
+    display: inline;
+    padding: 3px 6px;
+    border: none;
+    background: none;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+  }
+
+  #carouselWrapper {
+    position: relative;
+    overflow: hidden;
+  }
+  #carousel {
+    position: absolute;
+    visibility: hidden;
+  }
+
+  .ag-shop-card__preview--active{
+    border: none;
+  }
+
