--- a/www/local/assets/styles/card.css
+++ b/www/local/assets/styles/card.css
@@ -2513,3 +2513,49 @@ input:checked + .ag-shop-card__places-item:before {
     border: none;
   }
 
+@media (max-width: 575px) {
+  #carouselWrapperDown{
+    width: 255px;
+  }  
+}
+
+/*Small devices (landscape phones, 576px and up)*/ 
+@media (max-width: 576px) { 
+  .sliderdown{
+    margin-left: 15%;
+  }
+ 
+
+}
+
+@media (min-width: 990px) { 
+  .sliderdown{
+    margin-left: 35%;
+  }
+ 
+
+}
+
+/* Medium devices (tablets, 768px and up)*/
+@media (max-width: 1279px) { 
+  .sliderdown{
+   display: inline-flex;
+ }
+
+}
+
+@media (max-width: 1280px) { 
+
+  .slider{
+    display: none;
+  }
+}
+
+@media (min-width: 1280px)  {
+   .sliderdown{
+   display: none;
+ }
+
+}
+
+
