--- a/www/local/assets/styles/card.css
+++ b/www/local/assets/styles/card.css
@@ -2518,8 +2518,13 @@ input:checked + .ag-shop-card__places-item:before {
   margin-left: 5%;
 }
 .buttonsdown {
-  margin: 5px 10px;
+  margin: 5px 0px;
+
   
+}
+
+#buttonsdown{
+  margin-left: 30px;
 }
 .buttondown {
   font-size: 14px;
