--- a/www/local/templates/desktop2018/css/mod.css
+++ b/www/local/templates/desktop2018/css/mod.css
@@ -60,3 +60,22 @@ div.desktop-products-container--gridList{
     background-position: center;
     background-image: url(/local/templates/agshop_mobile/css/../img/icon__filter-ok.png);
 }
+
+/* new style*/
+
+/*Header*/
+
+#ag-shop-nav__link--active {
+    background-color: none;
+    cursor: pointer;
+    color: black;
+    font-family: "SFUIText-Bold";
+    font-weight: 700;
+    font-size: 30px;
+}
+
+#profie-win{
+  width: 356px;
+  height: 121px;
+  background-color: #007a6c;
+}
